--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./perfil pessoal/style/style.css">
     <title>Perfil Pessoal</title>
 </head>
 <body>
@@ -31,7 +31,7 @@
         <div class="container text-center">
             <div class="row">
               <div class="col">
-                <img src="./img/WhatsApp Image 2024-10-13 at 16.02.25.jpeg" alt="foto de perfil">
+                <img src="./perfil pessoal/img/WhatsApp Image 2024-10-13 at 16.02.25.jpeg" alt="foto de perfil">
               </div>
               <div class="col">
                 <h3>Váltson Silva de Araújo</h3>
@@ -52,7 +52,7 @@
         <div id="projetos">
 
              <div style="width: 18rem;" class="container-card" id="card-one">
-                <img src="./img/WhatsApp Image 2024-10-13 at 16.02.25.jpeg"  alt="...">
+                <img src="./perfil pessoal/img/WhatsApp Image 2024-10-13 at 16.02.25.jpeg"  alt="...">
                 <div class="container-card-text">
                     <h5>Página do carro</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -61,7 +61,7 @@
               </div>
 
               <div style="width: 18rem;" class="container-card">
-                <img src="./img/WhatsApp Image 2024-10-13 at 16.02.25.jpeg" class="card-img-top" alt="...">
+                <img src="./perfil pessoal/img/WhatsApp Image 2024-10-13 at 16.02.25.jpeg" class="card-img-top" alt="...">
                 <div class="container-card-text">
                     <h5>Página do carro</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -70,7 +70,7 @@
               </div>
 
               <div style="width: 18rem;" class="container-card">
-                <img src="./img/WhatsApp Image 2024-10-13 at 16.02.25.jpeg" class="card-img-top" alt="...">
+                <img src="./perfil pessoal/img/WhatsApp Image 2024-10-13 at 16.02.25.jpeg" class="card-img-top" alt="...">
                 <div class="container-card-text">
                     <h5>Página do carro</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -79,7 +79,7 @@
               </div>
 
               <div style="width: 18rem;" class="container-card">
-                <img src="./img/WhatsApp Image 2024-10-13 at 16.02.25.jpeg" class="card-img-top" alt="...">
+                <img src="./perfil pessoal/img/WhatsApp Image 2024-10-13 at 16.02.25.jpeg" class="card-img-top" alt="...">
                 <div class="container-card-text">
                     <h5>Página do carro</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -88,7 +88,7 @@
               </div>
 
               <div style="width: 18rem;" class="container-card">
-                <img src="./img/WhatsApp Image 2024-10-13 at 16.02.25.jpeg" class="card-img-top" alt="...">
+                <img src="./perfil pessoal/img/WhatsApp Image 2024-10-13 at 16.02.25.jpeg" class="card-img-top" alt="...">
                 <div class="container-card-text">
                     <h5>Página do carro</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -97,7 +97,7 @@
               </div>
 
               <div style="width: 18rem;" class="container-card">
-                <img src="./img/WhatsApp Image 2024-10-13 at 16.02.25.jpeg" class="card-img-top" alt="...">
+                <img src="./perfil pessoal/img/WhatsApp Image 2024-10-13 at 16.02.25.jpeg" class="card-img-top" alt="...">
                 <div class="container-card-text">
                     <h5>Página do carro</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -118,7 +118,7 @@
       <div class="container text-center" id="container-skills">
         <div class="row d-flex align-items-center">
           <div class="col-2">
-            <img src="./img/HTML5_logo_and_wordmark.svg.png" alt="" id="img-html">
+            <img src="./perfil pessoal/img/HTML5_logo_and_wordmark.svg.png" alt="" id="img-html">
           </div>
           <div class="col-6">
             <div class="barra">
@@ -129,7 +129,7 @@
 
         <div class="row d-flex align-items-center">
           <div class="col-2">
-            <img src="./img/CSS3-removebg-preview.png" alt="" id="img-css">
+            <img src="./perfil pessoal/img/CSS3-removebg-preview.png" alt="" id="img-css">
           </div>
           <div class="col-8">
             <div class="barra">
@@ -140,7 +140,7 @@
 
         <div class="row d-flex align-items-center">
           <div class="col-2">
-            <img src="./img/Javascript (JS) Logo.png" alt="" id="img-js">
+            <img src="./perfil pessoal/img/Javascript (JS) Logo.png" alt="" id="img-js">
           </div>
           <div class="col-8">
             <div class="barra">
@@ -151,7 +151,7 @@
 
         <div class="row d-flex align-items-center">
           <div class="col-2">
-            <img src="./img/Bootstrap Logo.png" alt="" id="img-bootstrap">
+            <img src="./perfil pessoal/img/Bootstrap Logo.png" alt="" id="img-bootstrap">
           </div>
           <div class="col-8">
             <div class="barra">
@@ -167,7 +167,7 @@
 
       <div id="container-contato">
         <div id="localizacao">
-          <img src="./img/Captura de tela 2024-11-10 134633.png" alt="">
+          <img src="./perfil pessoal/img/Captura de tela 2024-11-10 134633.png" alt="">
           <h4>Minha Localização</h4>
         </div>
         
@@ -211,7 +211,7 @@
       
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="./src/script.js"></script>
+    <script src="./perfil pessoal/src/script.js"></script>
     <script>
           // Example starter JavaScript for disabling form submissions if there are invalid fields
         (() => {
