--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
             <input type="hidden" name="_subject" value="Novo Contato!">
             <input type="text" name="_honey" style="display:none">
             <input type="hidden" name="_captcha" value="false">
+            <input type="hidden" name="_next" value="./index.html">
             
           </form>
         </div>
