--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             <input type="hidden" name="_subject" value="Novo Contato!">
             <input type="text" name="_honey" style="display:none">
             <input type="hidden" name="_captcha" value="false">
-            <input type="hidden" name="_next" value="./index.html">
+            <input type="hidden" name="_next" value="https://valtson-ara.github.io/perfil-pessoal/">
             
           </form>
         </div>
