--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
                   <a class="nav-link active" aria-current="page" href="#sobre">Sobre</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Portifolio</a>
+                  <a class="nav-link" href="#portifolio">Portifolio</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Skills</a>
+                  <a class="nav-link" href="#skills">Skills</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link">Contato</a>
+                  <a class="nav-link" href="#contato">Contato</a>
                 </li>
               </ul>
         </nav>
@@ -52,56 +52,56 @@
         <div id="projetos">
 
              <div style="width: 18rem;" class="container-card" id="card-one">
-                <img src="./perfil pessoal/img/WhatsApp Image 2024-10-13 at 16.02.25.jpeg"  alt="...">
+                <img src="./perfil pessoal/img/Captura de tela 2024-11-10 220932.png"  alt="...">
                 <div class="container-card-text">
                     <h5>Página do carro</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <a href="./perfil pessoal/projetos/projeto do carro/index.html" class="btn btn-primary">Ver Projeto</a>
                 </div>
               </div>
 
               <div style="width: 18rem;" class="container-card">
-                <img src="./perfil pessoal/img/WhatsApp Image 2024-10-13 at 16.02.25.jpeg" class="card-img-top" alt="...">
+                <img src="./perfil pessoal/img/Captura de tela 2024-11-10 221051.png" class="card-img-top" alt="...">
                 <div class="container-card-text">
                     <h5>Página do carro</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <a href="./perfil pessoal/projetos/jogo oculto/index.html" class="btn btn-primary">Ver Projeto</a>
                 </div>
               </div>
 
               <div style="width: 18rem;" class="container-card">
-                <img src="./perfil pessoal/img/WhatsApp Image 2024-10-13 at 16.02.25.jpeg" class="card-img-top" alt="...">
+                <img src="./perfil pessoal/img/Captura de tela 2024-11-10 220932.png" class="card-img-top" alt="...">
                 <div class="container-card-text">
                     <h5>Página do carro</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <a href="#" class="btn btn-primary">Ver Projeto</a>
                 </div>
               </div>
 
               <div style="width: 18rem;" class="container-card">
-                <img src="./perfil pessoal/img/WhatsApp Image 2024-10-13 at 16.02.25.jpeg" class="card-img-top" alt="...">
+                <img src="./perfil pessoal/img/Captura de tela 2024-11-10 220932.png" class="card-img-top" alt="...">
                 <div class="container-card-text">
                     <h5>Página do carro</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <a href="#" class="btn btn-primary">Ver Projeto</a>
                 </div>
               </div>
 
               <div style="width: 18rem;" class="container-card">
-                <img src="./perfil pessoal/img/WhatsApp Image 2024-10-13 at 16.02.25.jpeg" class="card-img-top" alt="...">
+                <img src="./perfil pessoal/img/Captura de tela 2024-11-10 220932.png" class="card-img-top" alt="...">
                 <div class="container-card-text">
                     <h5>Página do carro</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <a href="#" class="btn btn-primary">Ver Projeto</a>
                 </div>
               </div>
 
               <div style="width: 18rem;" class="container-card">
-                <img src="./perfil pessoal/img/WhatsApp Image 2024-10-13 at 16.02.25.jpeg" class="card-img-top" alt="...">
+                <img src="./perfil pessoal/img/Captura de tela 2024-11-10 220932.png" class="card-img-top" alt="...">
                 <div class="container-card-text">
                     <h5>Página do carro</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <a href="#" class="btn btn-primary">Ver Projeto</a>
                 </div>
               </div>
 
@@ -204,10 +204,11 @@
         </div>
       </div>
 
-      
-
-
     </section>
+
+    <footer>
+      <p>Váltson Silva de Araújo 2024. Todos os direitos reservados.</p>
+    </footer>
 
       
 
