--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./perfil pessoal/style/style.css">
+    <link rel="stylesheet" href="./perfil pessoal/style/responsive.css">
     <title>Perfil Pessoal</title>
 </head>
 <body>
     <header>
         <nav>
-            <ul class="nav justify-content-end">
+            <ul class="nav justify-content-end" id="nav-items">
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="#sobre">Sobre</a>
                 </li>
@@ -29,8 +30,8 @@
 
     <section id="sobre">
         <div class="container text-center">
-            <div class="row">
-              <div class="col">
+            <div class="row" id="container-sobre">
+              <div class="col" id="sobre-img-div">
                 <img src="./perfil pessoal/img/WhatsApp Image 2024-10-13 at 16.02.25.jpeg" alt="foto de perfil">
               </div>
               <div class="col">
@@ -117,10 +118,10 @@
 
       <div class="container text-center" id="container-skills">
         <div class="row d-flex align-items-center">
-          <div class="col-2">
+          <div class="col-2 div-img-skills">
             <img src="./perfil pessoal/img/HTML5_logo_and_wordmark.svg.png" alt="" id="img-html">
           </div>
-          <div class="col-6">
+          <div class="col-1">
             <div class="barra">
               <p>100%</p>
             </div>
@@ -128,10 +129,10 @@
         </div>
 
         <div class="row d-flex align-items-center">
-          <div class="col-2">
+          <div class="col-2 div-img-skills">
             <img src="./perfil pessoal/img/CSS3-removebg-preview.png" alt="" id="img-css">
           </div>
-          <div class="col-8">
+          <div class="col-1">
             <div class="barra">
               <p>100%</p>
             </div>
@@ -139,10 +140,10 @@
         </div>
 
         <div class="row d-flex align-items-center">
-          <div class="col-2">
+          <div class="col-2 div-img-skills">
             <img src="./perfil pessoal/img/Javascript (JS) Logo.png" alt="" id="img-js">
           </div>
-          <div class="col-8">
+          <div class="col-1">
             <div class="barra">
               <p>100%</p>
             </div>
@@ -150,10 +151,10 @@
         </div>
 
         <div class="row d-flex align-items-center">
-          <div class="col-2">
+          <div class="col-2 div-img-skills">
             <img src="./perfil pessoal/img/Bootstrap Logo.png" alt="" id="img-bootstrap">
           </div>
-          <div class="col-8">
+          <div class="col-1">
             <div class="barra">
               <p>100%</p>
             </div>
