--- a/index.html
+++ b/index.html
@@ -56,53 +56,71 @@
                 <img src="./perfil pessoal/img/Captura de tela 2024-11-10 220932.png"  alt="...">
                 <div class="container-card-text">
                     <h5>Página do carro</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="./perfil pessoal/projetos/projeto do carro/index.html" class="btn btn-primary">Ver Projeto</a>
+                    <p class="card-text">É um jogo que permite ao usuário acelerar ou desacelerar os carros, propiciando assim uma experiência divertida.</p>
+                    <a href="./perfil pessoal/projetos/projeto-do-carro/index.html" class="btn btn-primary">Ver Projeto</a>
                 </div>
               </div>
 
               <div style="width: 18rem;" class="container-card">
                 <img src="./perfil pessoal/img/Captura de tela 2024-11-10 221051.png" class="card-img-top" alt="...">
                 <div class="container-card-text">
-                    <h5>Página do carro</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="./perfil pessoal/projetos/jogo oculto/index.html" class="btn btn-primary">Ver Projeto</a>
+                    <h5>Jogo do número Oculto</h5>
+                    <p class="card-text">É um jogo em que o usuário deve tentar adivinhar um número escolhido de modo aleatório, pelo programa.</p>
+                    <a href="./perfil pessoal/projetos/jogo-oculto/index.html" class="btn btn-primary">Ver Projeto</a>
                 </div>
               </div>
 
               <div style="width: 18rem;" class="container-card">
-                <img src="./perfil pessoal/img/Captura de tela 2024-11-10 220932.png" class="card-img-top" alt="...">
+                <img src="./perfil pessoal/img/Captura de tela 2024-11-24 132947.png" class="card-img-top" alt="...">
                 <div class="container-card-text">
-                    <h5>Página do carro</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Ver Projeto</a>
+                    <h5>Lista de tarefas</h5>
+                    <p class="card-text">É um programa que o usuário pode usar para organizar as suas tarefas.</p>
+                    <a href="./perfil pessoal/projetos/atividade_lista_tarefas/index.html" class="btn btn-primary">Ver Projeto</a>
                 </div>
               </div>
 
               <div style="width: 18rem;" class="container-card">
-                <img src="./perfil pessoal/img/Captura de tela 2024-11-10 220932.png" class="card-img-top" alt="...">
+                <img src="./perfil pessoal/img/Captura de tela 2024-11-24 133024.png" class="card-img-top" alt="...">
                 <div class="container-card-text">
-                    <h5>Página do carro</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Ver Projeto</a>
+                    <h5>Calculadora</h5>
+                    <p class="card-text">Este projeto é uma calculadora.</p>
+                    <a href="./perfil pessoal/projetos/calculadora/index.html" class="btn btn-primary">Ver Projeto</a>
                 </div>
               </div>
 
               <div style="width: 18rem;" class="container-card">
-                <img src="./perfil pessoal/img/Captura de tela 2024-11-10 220932.png" class="card-img-top" alt="...">
+                <img src="./perfil pessoal/img/Captura de tela 2024-11-24 133050.png" class="card-img-top" alt="...">
                 <div class="container-card-text">
-                    <h5>Página do carro</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Ver Projeto</a>
+                    <h5>Jogo da memória</h5>
+                    <p class="card-text">É um jogo em que se testa a memória do usuário, lhe mostrando imagens de carros, as quais ele deve encontrar as imagens iguais.</p>
+                    <a href="./perfil pessoal/projetos/Jogo-da-Memória/index.html" class="btn btn-primary">Ver Projeto</a>
                 </div>
               </div>
 
               <div style="width: 18rem;" class="container-card">
-                <img src="./perfil pessoal/img/Captura de tela 2024-11-10 220932.png" class="card-img-top" alt="...">
+                <img src="./perfil pessoal/img/Captura de tela 2024-11-24 133109.png" class="card-img-top" alt="...">
                 <div class="container-card-text">
-                    <h5>Página do carro</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Ver Projeto</a>
+                    <h5>Jogo Pedra, papel e tesoura</h5>
+                    <p class="card-text">É um jogo tradicional em que o usuário escolhe entre 3 opções, de modo que dependendo das opções escolhidas pelos usuários, podem ganhar, perder ou empatar.</p>
+                    <a href="./perfil pessoal/projetos/jogo-pedra-papel-e-tesoura/index.html" class="btn btn-primary">Ver Projeto</a>
+                </div>
+              </div>
+
+              <div style="width: 18rem;" class="container-card">
+                <img src="./perfil pessoal/img/Captura de tela 2024-11-24 133219.png" class="card-img-top" alt="...">
+                <div class="container-card-text">
+                    <h5>Lista de tarefas Kanban</h5>
+                    <p class="card-text">É uma lista de tarefas, em que se pode organizar as tarefas, de modo mais dinâmico.</p>
+                    <a href="./perfil pessoal/projetos/Projeto-Kanban/index.html" class="btn btn-primary">Ver Projeto</a>
+                </div>
+              </div>
+
+              <div style="width: 18rem;" class="container-card">
+                <img src="./perfil pessoal/img/Captura de tela 2024-11-24 133309.png" class="card-img-top" alt="...">
+                <div class="container-card-text">
+                    <h5>Banco Digital</h5>
+                    <p class="card-text">Este projeto simula um banco digital, que permite ao usuário fazer transações financeiras via pix.</p>
+                    <a href="./perfil pessoal/projetos/Banco-Digital/index.html" class="btn btn-primary">Ver Projeto</a>
                 </div>
               </div>
 
