--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
              <div style="width: 18rem;" class="container-card" id="card-one">
                 <img src="./perfil pessoal/img/Captura de tela 2024-11-10 220932.png"  alt="...">
                 <div class="container-card-text">
-                    <h5>Página do carro</h5>
+                    <h5>Jogo do carro</h5>
                     <p class="card-text">É um jogo que permite ao usuário acelerar ou desacelerar os carros, propiciando assim uma experiência divertida.</p>
                     <a href="./perfil pessoal/projetos/projeto-do-carro/index.html" class="btn btn-primary">Ver Projeto</a>
                 </div>
